<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.globalapp.maldivestravel.LoginActivity"
    android:background="@drawable/hook_map_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logofamily"
                android:scaleType="fitCenter"
                android:cropToPadding="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:scaleX=".8"
                android:scaleY=".8"
                android:adjustViewBounds="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/txtPhoneNumber"
                tools:breakStrategy="high_quality"
                android:singleLine="true"
                android:layout_marginTop="5dp"
                android:hint="@string/phone_No" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txtPassword"
                android:hint="@string/password_hint"
                android:singleLine="true"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtCarNo"
                android:hint="@string/car_No" />

            <Button
                android:text="@string/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="15dp"
                android:background="@drawable/loginbutton"

                android:textStyle="normal|bold"
                android:textSize="18sp"
                android:textColor="@android:color/background_light"
                android:onClick="LoginButton" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
