<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_current"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.globalapp.maldivestravel.CurrentActivity">


    <TextView
        android:text="@string/customer_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        app:layout_constraintRight_toRightOf="@+id/activity_current"
        app:layout_constraintLeft_toLeftOf="@+id/activity_current"
        app:layout_constraintTop_toTopOf="@+id/activity_current"
        android:textSize="14sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtCustomerName"
        app:layout_constraintRight_toRightOf="@+id/activity_current"
        app:layout_constraintLeft_toLeftOf="@+id/activity_current"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp" />

    <TextView
        android:text="@string/customer_phoneNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        app:layout_constraintRight_toRightOf="@+id/activity_current"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCustomerName"
        app:layout_constraintLeft_toLeftOf="@+id/activity_current" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtCustomerPhone"
        app:layout_constraintRight_toRightOf="@+id/activity_current"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintLeft_toLeftOf="@+id/activity_current"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp" />

    <TextView
        android:text="@string/from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        app:layout_constraintRight_toRightOf="@+id/activity_current"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCustomerPhone"
        app:layout_constraintLeft_toLeftOf="@+id/activity_current" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtCustomerLocation"
        app:layout_constraintRight_toRightOf="@+id/activity_current"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintLeft_toLeftOf="@+id/activity_current"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp" />

    <TextView
        android:text="@string/to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView15"
        app:layout_constraintRight_toRightOf="@+id/activity_current"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCustomerLocation"
        app:layout_constraintLeft_toLeftOf="@+id/activity_current" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtCustomerDestination"
        app:layout_constraintRight_toRightOf="@+id/activity_current"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintLeft_toLeftOf="@+id/activity_current"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp" />

    <TextView
        android:text="Date"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtDate"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCustomerDestination"
        app:layout_constraintLeft_toLeftOf="@+id/activity_current"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <TextView
        android:text="Time"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtTime"
        app:layout_constraintLeft_toLeftOf="@+id/activity_current"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txtDate"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/stat_sys_phone_call"
        android:id="@+id/fab"
        app:layout_constraintBottom_toBottomOf="@+id/activity_current"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="@+id/activity_current"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:backgroundTint="@android:color/holo_orange_light" />

    <Button
        android:text="Accept Order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAccept"
        app:layout_constraintBottom_toBottomOf="@+id/fab"
        app:layout_constraintRight_toRightOf="@+id/txtCustomerDestination"
        app:layout_constraintLeft_toLeftOf="@+id/txtCustomerDestination"
        app:layout_constraintTop_toTopOf="@+id/fab"
        android:background="@drawable/loginbutton"
        android:textStyle="normal|bold"
        android:onClick="btnAceeptOrder" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_menu_mapmode"
        android:id="@+id/fbMap"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAccept"
        app:layout_constraintLeft_toLeftOf="@+id/activity_current"
        app:layout_constraintTop_toTopOf="@+id/btnAccept"
        app:backgroundTint="@android:color/holo_orange_light"
        android:onClick="fbMap" />

</android.support.constraint.ConstraintLayout>
